--- a/templates/base.html
+++ b/templates/base.html
@@ -44,10 +44,10 @@
                     <span class="glyphicon glyphicon-bell"></span>
                   </a>
                 </li>
-                <li><a href="{% url 'feeds' %}">Feed</a></li>
-                <li><a href="{% url 'articles' %}">Articles</a></li>
-                <li><a href="{% url 'questions' %}">Q&A</a></li>
-                <li><a href="{% url 'network' %}">Network</a></li>
+                <li><a href="#">Feed</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Q&A</a></li>
+                <li><a href="#">Network</a></li>
               </ul>
               -->
 
@@ -68,9 +68,9 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Account Settings</a></li>
+                    <li><a href="{% url 'settings' %}">Account Settings</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Log out</a></li>
+                    <li><a href="{% url 'logout' %}">Log out</a></li>
                   </ul>
                 </li>
               </ul>
