--- a/feeds/templates/feeds/compose.html
+++ b/feeds/templates/feeds/compose.html
@@ -3,44 +3,39 @@
 {% load staticfiles %}
 
 {% block head %}
-<link href="{% static 'css/feeds.css' %}?v=1" rel="stylesheet">
+<link href="{% static 'css/feeds.css' %}" rel="stylesheet">
 {% endblock head %}
 
 {% block main %}
-<div class="container-fluid">
+<br>
+<ol class="breadcrumb">
+    <li><a href="{% url 'feeds' %}">Feeds</a></li>
+    <li class="active">Compose Feed</li>
+</ol>
 
-    <div class="row">
+<h3>Compose</h3>
+<form role="form" action="{% url 'compose' %}" method="post"
+      enctype="multipart/form-data">
+    {% csrf_token %}
+    {% for field in form %}
+    <div class="form-group{% if field.errors %} has-error{% endif %}">
+        <label for="{{ field.label }}" class="control-label">{{ field.label }}</label>
+        {{ field }}
+        {% if field.help_text %}
+        <span class="help-block">{{ field.help_text }}</span>
+        {% endif %}
+        {% for error in field.errors %}
+        <label class="control-label">{{ error }}</label>
+        {% endfor %}
+    </div>
+    {% endfor %}
 
-        <div class="col-sm-12 col-md-7">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <h3>Compose</h3>
-                    {% if error_message %}
-                        <p><strong>{{ error_message }}</strong></p>
-                    {% endif %}
-                    <form class="form-horizontal" role="form" action="{% url 'compose' %}" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {% for field in form %}
     <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <span class="text-danger small">{{ field.errors }}</span>
-        </div>
-        <label class="control-label col-sm-2">{{ field.label_tag }}</label>
-        <div class="col-sm-10">{{ field }}</div>
-    </div>
-{% endfor %}
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="{% url 'feeds' %}" class="btn btn-default">Cancel</a>
 
     </div>
+</form>
 
-</div>
 {% endblock main %}
