--- a/feeds/templates/feeds/partial_feed.html
+++ b/feeds/templates/feeds/partial_feed.html
@@ -17,7 +17,7 @@
             {% if feed.post_image %}
             <img src="{{ feed.post_image.url }}" width="100%" height="auto">
             {% endif %}
-            <!--<div class="interaction">
+            <div class="interaction">
               {% if user in feed.get_likers %}
                 <a href="#" class="like unlike">
                   <span class="glyphicon glyphicon-thumbs-up"></span>
@@ -31,11 +31,12 @@
                   (<span class="like-count">{{ feed.likes }}</span>)
                 </a>
               {% endif %}
+                <!--
               <a href="#" class="comment">
                 <span class="glyphicon glyphicon-comment"></span> {% trans 'Comment' %}
                 (<span class="comment-count">{{ feed.comments }}</span>)
-              </a>
-            </div>-->
+              </a>-->
+            </div>
             <!--<div class="comments">
               <form role="form" method="post" action="{{ comment }}" onsubmit="return false">
                 {% csrf_token %}
