--- a/core/templates/core/password.html
+++ b/core/templates/core/password.html
@@ -12,14 +12,7 @@
       {% include 'core/partial_settings_menu.html' with active='password' %}
     </div>
     <div class="col-md-9">
-      {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-success alert-dismissable">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            {{ message }}
-          </div>
-        {% endfor %}
-      {% endif %}
+      {% include 'messages.html' %}
       <h3 style="margin-top: 0">Change Password</h3>
       <form role="form" class="form-horizontal" method="post" action="{% url 'password' %}">
         {% csrf_token %}
