--- a/core/templates/core/picture.html
+++ b/core/templates/core/picture.html
@@ -19,14 +19,7 @@
       {% include 'core/partial_settings_menu.html' with active='picture' %}
     </div>
     <div class="col-md-9">
-      {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-success alert-dismissable">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            {{ message }}
-          </div>
-        {% endfor %}
-      {% endif %}
+      {% include 'messages.html' %}
       <h3 style="margin-top: 0">Change Picture</h3>
       <img src="{{ user.profile.get_picture }}" style="width: 150px; border-radius: 5px; margin-bottom: 1em;">
       <form enctype="multipart/form-data" method="post" action="{% url 'upload_picture' %}" id="picture-upload-form">
