--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
               {% endif %}
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a href="{% url 'profile' user.username %}">{{ user.profile.get_screen_name }}</a>
+                  <a href="{{ user.profile.get_absolute_url }}">{{ user.profile.get_screen_name }}</a>
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
